# cc-skill-router

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
skill_router/: __init__.py  cli.py  registry.py  search.py
skills/skill-router/: SKILL.md
tests/: test_cli.py  test_registry.py  test_router.py  test_search.py
