[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-skill-router"
version = "0.1.1"
description = "Semantic skill router for Claude Code — bilingual fuzzy search over your skill registry"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hugo x", email = "stillaliveness@outlook.com"},
]
keywords = [
    "claude-code",
    "skill-router",
    "skill-search",
    "mcp",
    "ai-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0",
]

[project.scripts]
skill-router = "skill_router.cli:main"

[project.urls]
Homepage = "https://github.com/maxliven/cc-skill-router"
Repository = "https://github.com/maxliven/cc-skill-router.git"
Issues = "https://github.com/maxliven/cc-skill-router/issues"

[tool.hatch.build.targets.wheel]
packages = ["skill_router"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
