[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-skill-router"
version = "0.2.0"
description = "Semantic skill router for Claude Code — bilingual fuzzy search over your skill registry"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Hugo x", email = "stillaliveness@outlook.com"},
]
keywords = [
    "claude-code",
    "skill-router",
    "skill-search",
    "mcp",
    "ai-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
skill-router = "skill_router.cli:main"

[project.urls]
Homepage = "https://github.com/maxliven/cc-skill-router"
Repository = "https://github.com/maxliven/cc-skill-router"
Issues = "https://github.com/maxliven/cc-skill-router/issues"
Changelog = "https://github.com/maxliven/cc-skill-router/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["skill_router"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
